<resources>
    <string name="app_name">Andro\'Fit</string>
    <string name="title_meals">Repas</string>
    <string name="title_friends">Friends</string>
    <string name="title_settings">Options</string>

    <!-- App bar right text title -->
    <string name="title_sessions">My sessions</string>

    <string name="title_session_detail">Session detail</string>
    <string name="title_session_add">Add session</string>
    <string name="title_session_edit">Edit session</string>

    <string name="title_meal_detail">Meal detail</string>
    <string name="title_meal_add">Add meal</string>
    <string name="title_meal_edit">Edit meal</string>

    <!-- Strings used in session fragment -->
    <string name="sessions_deleted">" : session deleted"</string>
    <string name="title_label">Title</string>
    <string name="location_label">Location</string>
    <string name="begin_date_label">Beginning Date</string>
    <string name="end_date_label">End Date</string>
    <string name="duration_label">Duration</string>
    <string name="description_label">Description</string>

    <string name="session_intent_name" translatable="false">SESSION_INTENT</string>
    <string name="session_intent_edit_context_name" translatable="false">SESSION_INTENT_CONTEXT</string>
    <string name="session_intent_context_edit" translatable="false">SESSION_EDIT_INTENT</string>
    <string name="session_intent_context_add" translatable="false">SESSION_ADD_INTENT</string>

    <!-- Content Description String -->
    <string name="cd_sessions" translatable="false">My sport sessions button</string>
    <string name="cd_meals" translatable="false">My meals button</string>
    <string name="cd_friends" translatable="false">My friends button</string>
    <string name="cd_settings" translatable="false">Settings button</string>

    <!-- Strings used in meal fragment -->
    <string name="meal_date" translatable="false">Date</string>
    <string name="meal_time" translatable="false">Time</string>


    <string name="meal_intent_name" translatable="false">SESSION_INTENT</string>
    <string name="meal_intent_edit_context_name" translatable="false">MEAL_INTENT_CONTEXT</string>
    <string name="meal_intent_context_edit" translatable="false">MEAL_EDIT_INTENT</string>
    <string name="meal_intent_context_add" translatable="false">MEAL_ADD_INTENT</string>

    <string name="meal_date_label">Date</string>
    <string name="meal_time_label">Time</string>

    <!-- Strings used in settings fragment -->
    <string name="desc_androfit">© 2020 Andro\'Fit - CNAM GRAND-EST\n\nAndroid Team :\nDESVIGNES MATTHIEU - LEGER ALIX - COLLIN SIMON - AYAD MOHAMMED-YACINE</string>
    <string name="credits">Credits</string>
    <string name="langue">Language :</string>

    <!-- Globally used String -->
    <string name="save_button_label">Save</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="optional">Optional*</string>
    <string name="required">Required*</string>
    <string name="form_error_message">Form is incorrect</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="meal_deleted">: meal deleted</string>
    <string name="meal_intent_name" translatable="false">MEAL_INTENT</string>
    <string name="preferences_file_label" translatable="false">preferences_files_label</string>
    <string name="current_user_id" translatable="false">current_user_id</string>
    <string name="not_friends_msg">You aren\'t friend with this user.</string>

</resources>
