<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/session_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/blue"
        android:text="@string/save_button_label"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/session_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/session_description_editText" />

    <Button
        android:id="@+id/session_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/red"
        android:text="@string/cancel_button_label"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/session_save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_description_editText" />

    <EditText
        android:id="@+id/session_description_editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/session_description_content_bg"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/optional"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/session_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_edit_description_label"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/session_edit_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/description_label"
        android:textColor="@color/mainGreen"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_edit_beginning_date_content" />

    <TextView
        android:id="@+id/session_edit_beginning_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/begin_date_label"
        android:textColor="@color/mainGreen"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_edit_location_content" />

    <TextView
        android:id="@+id/session_edit_end_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/end_date_label"
        android:textColor="@color/mainGreen"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/session_edit_beginning_date_label"
        app:layout_constraintTop_toBottomOf="@+id/session_edit_location_content" />

    <TextView
        android:id="@+id/session_edit_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_label"
        android:textColor="@color/mainGreen"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <EditText
        android:id="@+id/session_edit_title_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/mainGreen"
        android:ems="14"
        android:hint="@string/required"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_edit_title_label"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/session_edit_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/location_label"
        android:textColor="@color/mainGreen"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_edit_title_content" />

    <EditText
        android:id="@+id/session_edit_location_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/mainGreen"
        android:ems="14"
        android:hint="@string/required"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_edit_location_label"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/session_edit_beginning_date_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/mainGreen"
        android:ems="8"
        android:focusable="false"
        android:hint="@string/required"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_edit_beginning_date_label"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/session_edit_end_date_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/mainGreen"
        android:ems="8"
        android:focusable="false"
        android:hint="@string/required"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/session_edit_beginning_date_content"
        app:layout_constraintTop_toBottomOf="@+id/session_edit_end_date_label"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>